Settings reset prompt: the dialog should have focus when shown.

BUG=703701

Review-Url: https://codereview.chromium.org/2764033004
Cr-Commit-Position: refs/heads/master@{#458603}

Former-commit-id: e33bb720f168fdb711b15b20832632970166a81b